<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ea4335"
    android:orientation="vertical"
    tools:context="com.example.yasha.hclstraighttalk.LoginActivity">

    <!-- Login progress -->
    <!--
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
    -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="20dip"
        android:contentDescription="@string/footer"
        android:src="@drawable/logo" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="45dip">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#fff"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:singleLine="true" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#fff"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#ffffff"
                android:onClick="openMenu"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dip"
        android:contentDescription="@string/footer"
        android:src="@drawable/hclfooter" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Guest Login"
        android:id="@+id/button"
        android:layout_above="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:background="#ffffff"
        android:onClick="openMenu"
        />


</RelativeLayout>
